--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.1",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
